feat(roomService::getSpectatableRooms): fix some method callings in `getSpectatableRooms`(#41)
- (typo) `roomRepository.findSpectat**e**ableRooms` 오타를 정정하였습니다.
- `Room::toDTO` -> `this::buildRoomDTOFromEntity`: 메소드가 이동함에 따라 변경하였습니다.
- ``.collect(Collectors.toList());` -> `.toList();`: `getPlayableRooms` 와 동일하게 하여 코드에서 일관성을 가지게 하였습니다.
- 주석을 최신화 하였습니다.